force-app/main/default/objects/Survey_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Example dynamic entity link. Populated at runtime from the JSON entity mapping when the key "Account__c" is provided. Add more lookup fields like this one to connect Survey_Response to additional entities without code changes.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>