force-app/main/default/objects/Survey_Response__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Timestamp of when the response was submitted (set by Apex on save).</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>