force-app/main/default/objects/Survey_Response__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce user who submitted this response.</description>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Survey Responses Submitted</relationshipLabel>
    <relationshipName>Survey_Responses_Submitted</relationshipName>
    <type>Lookup</type>
</CustomField>