force-app/main/default/objects/Survey_Response__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Survey this response is a submission of. Required.</description>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>